# token-distillation

./: CITATION.bib  README.md  example_st.py  pyproject.toml
.github/workflows/: tests.yml
paper/: README.md  apply_embedding_init.py  pyproject.toml  token_distillation.py
paper/evals/arabic_leaderboard_light_abcd/: arabic_leaderboard_light_abcd.yaml
paper/evals/arabic_leaderboard_light_abcd/arabic_leaderboard_alghafa_light_abcd/: arabic_leaderboard_alghafa_light_abcd.yaml  arabic_leaderboard_alghafa_mcq_exams_test_ar_light_abcd.yaml  arabic_leaderboard_alghafa_meta_ar_dialects_light_abcd.yaml  arabic_leaderboard_alghafa_meta_ar_msa_light_abcd.yaml  arabic_leaderboard_alghafa_multiple_choice_facts_truefalse_balanced_task_light_abcd.yaml  arabic_leaderboard_alghafa_multiple_choice_grounded_statement_soqal_task_light_abcd.yaml  arabic_leaderboard_alghafa_multiple_choice_grounded_statement_xglue_mlqa_task_light_abcd.yaml  arabic_leaderboard_alghafa_multiple_choice_rating_sentiment_no_neutral_task_light_abcd.yaml  arabic_leaderboard_alghafa_multiple_choice_rating_sentiment_task_light_abcd.yaml  utils.py  (+1 more)
paper/evals/frenchbench_abcd/: _default_template_yaml  french_bench_arc_challenge_abcd.yaml  french_bench_boolqa_ab.yaml  french_bench_fquadv2_bool_ab.yaml  french_bench_grammar_abcd.yaml  french_bench_reading_comp_abcd.yaml  french_bench_topic_based_nli_abc.yaml  french_bench_vocab_abcd.yaml  french_bench_xnli_abc.yaml
paper/new_tokens/: combined_all_medical_word_counts.jsonl
token_distillation/: pyproject.toml
token_distillation/tests/: test_unit_helpers.py
token_distillation/token_distillation/: __init__.py  tokdist.py  tokdist_st.py  train_loop_st.py
(+149 files in other folders)
