[project]
name = "token_distillation"
version = "1.0.0"
description = "Attention-aware input embedding initialization for newly added tokens."
readme = "README.md"
authors = [{ name = "Konstantin Dobler", email = "konstantin.dobler@hpi.de" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "datasets>=4.8.5",
    "numpy>=2.4.4",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
    "fire>=0.7.1",
    "ahocorasick-rs>=1.0.3",
    "torch>=2.11.0",
    "sentencepiece>=0.2.1",
    "accelerate>=1.13.0",
    "huggingface-hub[cli]>=1.12.2",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]

# [tool.uv]
# environments = ["sys_platform == 'linux'"]  # force linux if cross-building
# no-build-isolation-package = ["flash-attn"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[tool.ruff]
line-length = 128

[tool.uv]
package = true

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
